// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getColors() should return correct colors for tagColor: background-base and theme: dark 1`] = `
{
  "backgroundColor": "#0E0E12",
  "backgroundHoverColor": "#292934",
  "focusColor": "#1A44EA",
  "primaryColor": "#FBFCFF",
}
`;

exports[`getColors() should return correct colors for tagColor: background-base and theme: light 1`] = `
{
  "backgroundColor": "#FFF",
  "backgroundHoverColor": "#E0E0E0",
  "focusColor": "#1A44EA",
  "primaryColor": "#010205",
}
`;

exports[`getColors() should return correct colors for tagColor: primary and theme: dark 1`] = `
{
  "backgroundColor": "#FBFCFF",
  "backgroundHoverColor": "#CECFD1",
  "focusColor": "#1A44EA",
  "primaryColor": "#010205",
}
`;

exports[`getColors() should return correct colors for tagColor: primary and theme: light 1`] = `
{
  "backgroundColor": "#010205",
  "backgroundHoverColor": "#535457",
  "focusColor": "#1A44EA",
  "primaryColor": "#FBFCFF",
}
`;

exports[`getComponentCss() should return correct css for color: background-base, isFocusable: false and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #0E0E12;
  color: #FBFCFF;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, isFocusable: false and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #FFF;
  color: #010205;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #0E0E12;
  color: #FBFCFF;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #292934;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #FFF;
  color: #010205;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #E0E0E0;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #212225;
  color: #FBFCFF;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #3E4045;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #EEEFF2;
  color: #010205;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #CBCED7;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error-soft, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #3A0F0F;
  color: #FBFCFF;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #3F2828;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error-soft, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #FFE2E4;
  color: #010205;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #F4CED1;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-info-soft, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #04294E;
  color: #FBFCFF;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #1A3856;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-info-soft, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #D3E1FF;
  color: #010205;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #C2D1F1;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success-soft, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #003320;
  color: #FBFCFF;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #0F432F;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success-soft, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #E4FFEC;
  color: #010205;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #D0F4DB;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning-soft, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #362B0A;
  color: #FBFCFF;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #3E3720;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning-soft, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #FFF4D2;
  color: #010205;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #F1E5C1;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #FBFCFF;
  color: #010205;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #CECFD1;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  display: flex;
  gap: 2px;
  align-items: center;
  position: relative;
  padding: 4px 9px;
  border-radius: 4px;
  background: #010205;
  color: #FBFCFF;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
::slotted(a), ::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
  appearance: none !important;
  border: 0 !important;
  text-align: left !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -4px !important;
  left: -4px !important;
  right: -4px !important;
  bottom: -4px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  span:hover {
    background: #535457;
  }
}

.icon {
  margin-left: -2px;
  align-self: flex-start;
}"
`;
